--- a/trunk/Life.vcproj
+++ b/trunk/Life.vcproj
@@ -191,6 +191,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\LineObject.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\NetworkingUtils.cpp"
 				>
 			</File>
@@ -270,6 +274,10 @@
 			</File>
 			<File
 				RelativePath=".\LD2000.lib"
+				>
+			</File>
+			<File
+				RelativePath=".\LineObject.h"
 				>
 			</File>
 			<File
